--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@
   --primaryBg: #437CF8;
   --whiteBg: #FFFFFF;
   --txtWhite: #FFFFFF;
+  --txtBlue: #437CF8;
   --fontFam: "Outfit";
   --fontSize: 17px;
+  --fontWeight: 600;
 }
 
 body {
@@ -11,11 +13,20 @@ body {
   font-family: 'Outfit' ,-apple-system, BlinkMacSystemFont,  'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  /* code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  } */
+  
+* {
+  font-family: 'Outfit' ,-apple-system, BlinkMacSystemFont,  'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
