update semua revisi v1

--- a/src/pages/03_JenisKartuKredit/jeniskartukredit.css
+++ b/src/pages/03_JenisKartuKredit/jeniskartukredit.css
@@ -1,4 +1,6 @@
 .style-card:hover {
-  background-color: #E5E5E5 ;
+  background-color: #d0eaff;
   border-radius: 5px;
+  padding: 1rem;
+  transition: 0.3s;
 }
